fix: Refresh sibling composite-string tooltips, update VRR/HDR descriptions and configs
Sibling composite-string settings now refresh their technical details panel when any shared-registry setting is toggled. VRR and Auto HDR descriptions updated across all 25 locales to clarify hardware requirements. Config files corrected with VRR name fix and new Auto HDR entry for Windows 11.

Fixes #363

--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -121,6 +121,8 @@
   "Button_Download": "Laai af",
   "Common_On": "Aan",
   "Common_Off": "Af",
+  "PowerStatus_PluggedIn": "Ingeprop",
+  "PowerStatus_OnBattery": "Op Battery",
   "Common_Search_Placeholder": "Tik hier om te soek...",
   "Common_NoSearchResults": "Geen instellings gevind wat ooreenstem met jou soektog nie. Probeer ander sleutelwoorde.",
   "Common_SelectAll": "Kies Alles",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Laat jou GPU sy eie geheue en skedulering bestuur vir verminderde vertraging en verbeterde verrigting",
   "Setting_gaming-directx-flip-model_Name": "Optimaliserings vir venster-speletjies",
   "Setting_gaming-directx-flip-model_Description": "Verminder vertraging en gebruik gevorderde funksies in versoenbare speletjies deur DirectX flip-aanbiedingsmodel te gebruik",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Veranderlike Verfriskwota (VRR) Optimaliserings",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Aktiveer VRR (G-Sync/FreeSync) optimaliserings vir gladder spel op versoenbare monitors. Deaktiveer slegs indien probleme met VRR skerms ondervind word",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Veranderlike Verfriskwota (VRR)",
+  "Setting_gaming-directx-vrr-optimizations_Description": "Aktiveer VRR (G-Sync/FreeSync) optimaliserings vir gladder spel. Vereis 'n VRR-versoenbare monitor; hierdie instelling het geen uitwerking as jou monitor nie VRR ondersteun nie",
+  "Setting_gaming-directx-auto-hdr_Name": "Outo HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Skakel SDR-inhoud outomaties om na HDR vir verbeterde kleure en helderheid. Vereis 'n HDR-bekwame skerm met HDR geaktiveer; hierdie instelling het geen uitwerking as jou skerm nie HDR ondersteun nie",
   "Setting_gaming-nvidia-sharpening_Name": "Nalatenskap NVIDIA Verskerping",
   "Setting_gaming-nvidia-sharpening_Description": "Aktiveer nalatenskap NVIDIA beeldverskerpingsfilter vir verbeterde visuele helderheid. Werk slegs op ouer NVIDIA bestuurders; nuwer bestuurders moet NVIDIA Beheerpaneel verskerping gebruik",
   "Setting_gaming-fullscreen-optimizations_Name": "Volskerm Optimaliserings",
