--- a/src/Winhance.UI/Features/Common/Localization/ar.json
+++ b/src/Winhance.UI/Features/Common/Localization/ar.json
@@ -111,6 +111,8 @@
     "Button_Download": "تنزيل",
     "Common_On": "تشغيل",
     "Common_Off": "إيقاف",
+    "PowerStatus_PluggedIn": "متصل بالكهرباء",
+    "PowerStatus_OnBattery": "على البطارية",
     "Common_Search_Placeholder": "اكتب هنا للبحث...",
     "Common_NoSearchResults": "لم يتم العثور على إعدادات مطابقة للبحث. جرّب كلمات مختلفة.",
     "Common_SelectAll": "تحديد الكل",
@@ -588,8 +590,10 @@
     "Setting_gaming-gpu-scheduling_Description": "السماح لمعالج الرسوميات بإدارة ذاكرته وجدولته لخفض زمن الاستجابة وتحسين الأداء",
     "Setting_gaming-directx-flip-model_Name": "تحسينات للألعاب بنمط النافذة",
     "Setting_gaming-directx-flip-model_Description": "تقليل زمن الاستجابة واستخدام ميزات متقدمة في الألعاب المتوافقة عبر استخدام نموذج العرض DirectX flip",
-    "Setting_gaming-directx-vrr-optimizations_Name": "تحسينات معدل التحديث المتغير",
-    "Setting_gaming-directx-vrr-optimizations_Description": "تمكين تحسينات VRR (G-Sync/FreeSync) لتجربة لعب أكثر سلاسة على الشاشات المتوافقة. عطّلها فقط إذا واجهت مشاكل مع شاشات VRR",
+    "Setting_gaming-directx-vrr-optimizations_Name": "معدل التحديث المتغير",
+    "Setting_gaming-directx-vrr-optimizations_Description": "تمكين تحسينات VRR (G-Sync/FreeSync) لتجربة لعب أكثر سلاسة. يتطلب شاشة متوافقة مع VRR؛ لا تأثير لهذا الإعداد إذا كانت شاشتك لا تدعم VRR",
+    "Setting_gaming-directx-auto-hdr_Name": "HDR تلقائي",
+    "Setting_gaming-directx-auto-hdr_Description": "تحويل محتوى SDR تلقائيًا إلى HDR لألوان وسطوع محسّنين. يتطلب شاشة تدعم HDR مع تفعيل HDR؛ لا تأثير لهذا الإعداد إذا كانت شاشتك لا تدعم HDR",
     "Setting_gaming-nvidia-sharpening_Name": "حدة NVIDIA القديمة",
     "Setting_gaming-nvidia-sharpening_Description": "تمكين مرشح حدة الصورة القديم من NVIDIA لتحسين وضوح الصورة. يعمل فقط على برامج تشغيل NVIDIA القديمة؛ يجب استخدام الحدة في لوحة تحكم NVIDIA مع برامج التشغيل الأحدث",
     "Setting_gaming-fullscreen-optimizations_Name": "تحسينات ملء الشاشة",
