--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -156,6 +156,8 @@
   "Button_Download": "Download",
   "Common_On": "On",
   "Common_Off": "Off",
+  "PowerStatus_PluggedIn": "Plugged In",
+  "PowerStatus_OnBattery": "On Battery",
   "Common_Search_Placeholder": "Type here to search...",
   "Common_NoSearchResults": "No settings found matching your search. Try different keywords.",
   "Common_SelectAll": "Select All",
@@ -637,8 +639,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Let your GPU manage its own memory and scheduling for reduced latency and improved performance",
   "Setting_gaming-directx-flip-model_Name": "Optimizations for windowed games",
   "Setting_gaming-directx-flip-model_Description": "Reduce latency and use advanced features in compatible games by using DirectX flip presentation model",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Variable Refresh Rate Optimizations",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Enable VRR (G-Sync/FreeSync) optimizations for smoother gameplay on compatible monitors. Disable only if experiencing issues with VRR displays",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Variable Refresh Rate",
+  "Setting_gaming-directx-vrr-optimizations_Description": "Enable VRR (G-Sync/FreeSync) optimizations for smoother gameplay. Requires a VRR-compatible monitor; this setting has no effect if your monitor does not support VRR",
+  "Setting_gaming-directx-auto-hdr_Name": "Auto HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Automatically convert SDR content to HDR for enhanced colors and brightness. Requires an HDR-capable display with HDR enabled; this setting has no effect if your display does not support HDR",
   "Setting_gaming-nvidia-sharpening_Name": "Legacy NVIDIA Sharpening",
   "Setting_gaming-nvidia-sharpening_Description": "Enable legacy NVIDIA image sharpening filter for enhanced visual clarity. Only works on older NVIDIA drivers; newer drivers should use NVIDIA Control Panel sharpening instead",
   "Setting_gaming-fullscreen-optimizations_Name": "Fullscreen Optimizations",
