--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -121,6 +121,8 @@
   "Button_Download": "Descargar",
   "Common_On": "Activado",
   "Common_Off": "Desactivado",
+  "PowerStatus_PluggedIn": "Enchufado",
+  "PowerStatus_OnBattery": "Con batería",
   "Common_Search_Placeholder": "Escribe aquí para buscar...",
   "Common_NoSearchResults": "No se encontraron configuraciones que coincidan con tu búsqueda. Prueba con otras palabras clave.",
   "Common_SelectAll": "Seleccionar todo",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Permite que tu GPU gestione su propia memoria y programación para reducir la latencia y mejorar el rendimiento",
   "Setting_gaming-directx-flip-model_Name": "Optimizaciones para juegos en ventana",
   "Setting_gaming-directx-flip-model_Description": "Reduce la latencia y utiliza funciones avanzadas en juegos compatibles usando el modelo de presentación DirectX flip",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Optimizaciones de Frecuencia de Actualización Variable",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Habilita las optimizaciones VRR (G-Sync/FreeSync) para un juego más fluido en monitores compatibles. Deshabilita solo si experimentas problemas con pantallas VRR",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Frecuencia de Actualización Variable",
+  "Setting_gaming-directx-vrr-optimizations_Description": "Habilitar optimizaciones VRR (G-Sync/FreeSync) para un juego más fluido. Requiere un monitor compatible con VRR; esta configuración no tiene efecto si tu monitor no soporta VRR",
+  "Setting_gaming-directx-auto-hdr_Name": "Auto HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Convierte automáticamente contenido SDR a HDR para colores y brillo mejorados. Requiere una pantalla compatible con HDR y HDR habilitado; esta configuración no tiene efecto si tu pantalla no soporta HDR",
   "Setting_gaming-nvidia-sharpening_Name": "Enfoque NVIDIA Heredado",
   "Setting_gaming-nvidia-sharpening_Description": "Habilita el filtro de enfoque de imagen NVIDIA heredado para una mayor claridad visual. Solo funciona con controladores NVIDIA más antiguos; los controladores más nuevos deben usar el enfoque del Panel de control de NVIDIA en su lugar",
   "Setting_gaming-fullscreen-optimizations_Name": "Optimizaciones de Pantalla Completa",
