--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -121,6 +121,8 @@
   "Button_Download": "Télécharger",
   "Common_On": "Activé",
   "Common_Off": "Désactivé",
+  "PowerStatus_PluggedIn": "Branché",
+  "PowerStatus_OnBattery": "Sur batterie",
   "Common_Search_Placeholder": "Tapez ici pour rechercher...",
   "Common_NoSearchResults": "Aucun paramètre trouvé correspondant à votre recherche. Essayez d'autres mots-clés.",
   "Common_SelectAll": "Tout sélectionner",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Laissez votre GPU gérer sa propre mémoire et sa planification pour une latence réduite et des performances améliorées",
   "Setting_gaming-directx-flip-model_Name": "Optimisations pour les jeux en mode fenêtré",
   "Setting_gaming-directx-flip-model_Description": "Réduisez la latence et utilisez des fonctionnalités avancées dans les jeux compatibles en utilisant le modèle de présentation flip de DirectX",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Optimisations du taux de rafraîchissement variable",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Activez les optimisations VRR (G-Sync/FreeSync) pour un jeu plus fluide sur les moniteurs compatibles. Désactivez uniquement si vous rencontrez des problèmes avec les écrans VRR",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Taux de rafraîchissement variable",
+  "Setting_gaming-directx-vrr-optimizations_Description": "Activer les optimisations VRR (G-Sync/FreeSync) pour un jeu plus fluide. Nécessite un moniteur compatible VRR ; ce paramètre n'a aucun effet si votre moniteur ne prend pas en charge le VRR",
+  "Setting_gaming-directx-auto-hdr_Name": "Auto HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Convertir automatiquement le contenu SDR en HDR pour des couleurs et une luminosité améliorées. Nécessite un écran compatible HDR avec HDR activé ; ce paramètre n'a aucun effet si votre écran ne prend pas en charge le HDR",
   "Setting_gaming-nvidia-sharpening_Name": "Amélioration de la netteté NVIDIA héritée",
   "Setting_gaming-nvidia-sharpening_Description": "Activez le filtre d'amélioration de la netteté d'image NVIDIA hérité pour une clarté visuelle améliorée. Ne fonctionne que sur les anciens pilotes NVIDIA ; les pilotes plus récents doivent utiliser l'amélioration de la netteté du panneau de configuration NVIDIA à la place",
   "Setting_gaming-fullscreen-optimizations_Name": "Optimisations plein écran",
