--- a/src/Winhance.UI/Features/Common/Localization/hi.json
+++ b/src/Winhance.UI/Features/Common/Localization/hi.json
@@ -121,6 +121,8 @@
   "Button_Download": "डाउनलोड करें",
   "Common_On": "चालू",
   "Common_Off": "बंद",
+  "PowerStatus_PluggedIn": "प्लग इन",
+  "PowerStatus_OnBattery": "बैटरी पर",
   "Common_Search_Placeholder": "खोजने के लिए यहां टाइप करें...",
   "Common_NoSearchResults": "आपकी खोज से मेल खाने वाली कोई सेटिंग नहीं मिली। विभिन्न कीवर्ड आज़माएं।",
   "Common_SelectAll": "सभी चुनें",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "कम विलंबता और बेहतर प्रदर्शन के लिए अपने जीपीयू को अपनी मेमोरी और निर्धारण का प्रबंधन करने दें",
   "Setting_gaming-directx-flip-model_Name": "विंडो वाले गेम के लिए ऑप्टिमाइज़ेशन",
   "Setting_gaming-directx-flip-model_Description": "डायरेक्टएक्स फ्लिप प्रेजेंटेशन मॉडल का उपयोग करके संगत गेम में विलंबता कम करें और उन्नत सुविधाओं का उपयोग करें",
-  "Setting_gaming-directx-vrr-optimizations_Name": "चर ताज़ा दर अनुकूलन",
-  "Setting_gaming-directx-vrr-optimizations_Description": "संगत मॉनिटर पर आसान गेमप्ले के लिए वीआरआर (जी-सिंक/फ्रीसिंक) ऑप्टिमाइज़ेशन सक्षम करें। केवल तभी अक्षम करें जब वीआरआर डिस्प्ले के साथ समस्याएं आ रही हों",
+  "Setting_gaming-directx-vrr-optimizations_Name": "चर ताज़ा दर",
+  "Setting_gaming-directx-vrr-optimizations_Description": "आसान गेमप्ले के लिए VRR (G-Sync/FreeSync) ऑप्टिमाइज़ेशन सक्षम करें। VRR-संगत मॉनिटर आवश्यक है; यदि आपका मॉनिटर VRR का समर्थन नहीं करता है तो इस सेटिंग का कोई प्रभाव नहीं होगा",
+  "Setting_gaming-directx-auto-hdr_Name": "ऑटो HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "बेहतर रंगों और चमक के लिए SDR सामग्री को स्वचालित रूप से HDR में बदलें। HDR सक्षम HDR-सक्षम डिस्प्ले आवश्यक है; यदि आपका डिस्प्ले HDR का समर्थन नहीं करता है तो इस सेटिंग का कोई प्रभाव नहीं होगा",
   "Setting_gaming-nvidia-sharpening_Name": "विरासत NVIDIA शार्पनिंग",
   "Setting_gaming-nvidia-sharpening_Description": "बढ़ी हुई दृश्य स्पष्टता के लिए विरासत NVIDIA छवि शार्पनिंग फ़िल्टर सक्षम करें। केवल पुराने NVIDIA ड्राइवरों पर काम करता है; नए ड्राइवरों को इसके बजाय NVIDIA नियंत्रण कक्ष शार्पनिंग का उपयोग करना चाहिए",
   "Setting_gaming-fullscreen-optimizations_Name": "पूर्णस्क्रीन ऑप्टिमाइज़ेशन",
