--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -121,6 +121,8 @@
   "Button_Download": "Letöltés",
   "Common_On": "Be",
   "Common_Off": "Ki",
+  "PowerStatus_PluggedIn": "Csatlakoztatva",
+  "PowerStatus_OnBattery": "Akkumulátorról",
   "Common_Search_Placeholder": "Írjon ide a kereséshez...",
   "Common_NoSearchResults": "Nem található beállítás a keresésnek megfelelően. Próbáljon más kulcsszavakat...",
   "Common_SelectAll": "Mindent kijelöl",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Hagyja, hogy a GPU kezelje a saját memóriáját és ütemezését a csökkentett késleltetés és a jobb teljesítmény érdekében",
   "Setting_gaming-directx-flip-model_Name": "Ablakos játékok optimalizálása",
   "Setting_gaming-directx-flip-model_Description": "Csökkentse a késleltetést és használja a kompatibilis játékok fejlett funkcióit a DirectX flip megjelenítési modelljének használatával",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Változó frissítési gyakoriság optimalizálások",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Engedélyezze a VRR (G-Sync/FreeSync) optimalizálásokat a simább játékmenet érdekében kompatibilis monitorokon. Csak akkor tiltsa le, ha VRR kijelzők használatakor problémákat tapasztal.",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Változó frissítési gyakoriság",
+  "Setting_gaming-directx-vrr-optimizations_Description": "VRR (G-Sync/FreeSync) optimalizálások engedélyezése a simább játékmenetért. VRR-kompatibilis monitor szükséges; ez a beállítás nem fejt ki hatást, ha a monitor nem támogatja a VRR-t",
+  "Setting_gaming-directx-auto-hdr_Name": "Auto HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Az SDR tartalom automatikus átalakítása HDR-re a jobb színek és fényerő érdekében. HDR-képes kijelző szükséges bekapcsolt HDR-rel; ez a beállítás nem fejt ki hatást, ha a kijelző nem támogatja a HDR-t",
   "Setting_gaming-nvidia-sharpening_Name": "Régi NVIDIA élesítés",
   "Setting_gaming-nvidia-sharpening_Description": "Engedélyezze a régi NVIDIA képszélesítő szűrőt a jobb vizuális tisztaság érdekében. Csak régebbi NVIDIA illesztőprogramokon működik; az újabb illesztőprogramoknak az NVIDIA Vezérlőpult élesítését kell használniuk",
   "Setting_gaming-fullscreen-optimizations_Name": "Teljes képernyős optimalizálások",
