--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -121,6 +121,8 @@
   "Button_Download": "Scarica",
   "Common_On": "On",
   "Common_Off": "Off",
+  "PowerStatus_PluggedIn": "Collegato",
+  "PowerStatus_OnBattery": "A batteria",
   "Common_Search_Placeholder": "Digita qui per cercare...",
   "Common_NoSearchResults": "Nessuna impostazione trovata corrispondente alla tua ricerca. Prova con parole chiave diverse.",
   "Common_SelectAll": "Seleziona tutto",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Lascia che la tua GPU gestisca la propria memoria e la pianificazione per una latenza ridotta e prestazioni migliorate",
   "Setting_gaming-directx-flip-model_Name": "Ottimizzazioni per i giochi in finestra",
   "Setting_gaming-directx-flip-model_Description": "Riduci la latenza e utilizza funzionalità avanzate nei giochi compatibili utilizzando il modello di presentazione flip di DirectX",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Ottimizzazioni della frequenza di aggiornamento variabile",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Abilita le ottimizzazioni VRR (G-Sync/FreeSync) per un gameplay più fluido su monitor compatibili. Disabilita solo se si riscontrano problemi con i display VRR",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Frequenza di aggiornamento variabile",
+  "Setting_gaming-directx-vrr-optimizations_Description": "Abilita le ottimizzazioni VRR (G-Sync/FreeSync) per un gameplay più fluido. Richiede un monitor compatibile con VRR; questa impostazione non ha effetto se il monitor non supporta VRR",
+  "Setting_gaming-directx-auto-hdr_Name": "Auto HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Converti automaticamente i contenuti SDR in HDR per colori e luminosità migliorati. Richiede un display compatibile HDR con HDR abilitato; questa impostazione non ha effetto se il display non supporta HDR",
   "Setting_gaming-nvidia-sharpening_Name": "Nitidezza NVIDIA legacy",
   "Setting_gaming-nvidia-sharpening_Description": "Abilita il filtro di nitidezza dell'immagine NVIDIA legacy per una maggiore chiarezza visiva. Funziona solo sui driver NVIDIA meno recenti; i driver più recenti dovrebbero invece utilizzare la nitidezza del pannello di controllo NVIDIA",
   "Setting_gaming-fullscreen-optimizations_Name": "Ottimizzazioni a schermo intero",
