--- a/src/Winhance.UI/Features/Common/Localization/ja.json
+++ b/src/Winhance.UI/Features/Common/Localization/ja.json
@@ -121,6 +121,8 @@
   "Button_Download": "ダウンロード",
   "Common_On": "オン",
   "Common_Off": "オフ",
+  "PowerStatus_PluggedIn": "電源接続時",
+  "PowerStatus_OnBattery": "バッテリー使用時",
   "Common_Search_Placeholder": "ここで検索...",
   "Common_NoSearchResults": "検索に一致する設定が見つかりませんでした。別のキーワードで試してください。",
   "Common_SelectAll": "すべて選択",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "GPUに独自のメモリとスケジューリングを管理させて、遅延を減らし、パフォーマンスを向上させます。",
   "Setting_gaming-directx-flip-model_Name": "ウィンドウモードゲームの最適化",
   "Setting_gaming-directx-flip-model_Description": "DirectXフリッププレゼンテーションモデルを使用して、互換性のあるゲームの遅延を減らし、高度な機能を使用します。",
-  "Setting_gaming-directx-vrr-optimizations_Name": "可変リフレッシュレートの最適化",
-  "Setting_gaming-directx-vrr-optimizations_Description": "互換性のあるモニターでよりスムーズなゲームプレイのためにVRR（G-Sync/FreeSync）最適化を有効にします。VRRディスプレイで問題が発生した場合にのみ無効にします。",
+  "Setting_gaming-directx-vrr-optimizations_Name": "可変リフレッシュレート",
+  "Setting_gaming-directx-vrr-optimizations_Description": "よりスムーズなゲームプレイのためにVRR（G-Sync/FreeSync）最適化を有効にします。VRR対応モニターが必要です。モニターがVRRをサポートしていない場合、この設定は効果がありません",
+  "Setting_gaming-directx-auto-hdr_Name": "自動HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "SDRコンテンツを自動的にHDRに変換し、色と明るさを向上させます。HDRが有効なHDR対応ディスプレイが必要です。ディスプレイがHDRをサポートしていない場合、この設定は効果がありません",
   "Setting_gaming-nvidia-sharpening_Name": "レガシーNVIDIAシャープニング",
   "Setting_gaming-nvidia-sharpening_Description": "視覚的な鮮明度を向上させるためにレガシーNVIDIAイメージシャープニングフィルターを有効にします。古いNVIDIAドライバーでのみ機能します。新しいドライバーは代わりにNVIDIAコントロールパネルシャープニングを使用する必要があります。",
   "Setting_gaming-fullscreen-optimizations_Name": "全画面最適化",
