--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -121,6 +121,8 @@
   "Button_Download": "Atsisiųsti",
   "Common_On": "Įjungta",
   "Common_Off": "Išjungta",
+  "PowerStatus_PluggedIn": "Prijungtas",
+  "PowerStatus_OnBattery": "Naudojant bateriją",
   "Common_Search_Placeholder": "Įveskite tekstą paieškai...",
   "Common_NoSearchResults": "Nerasta jūsų paiešką atitinkančių nustatymų. Išbandykite kitus raktinius žodžius.",
   "Common_SelectAll": "Pasirinkti viską",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Leisti jūsų GPU valdyti savo atmintį ir planavimą, kad būtų sumažinta delsa ir pagerintas našumas",
   "Setting_gaming-directx-flip-model_Name": "Optimizavimai langų režimo žaidimams",
   "Setting_gaming-directx-flip-model_Description": "Sumažinti delsą ir naudoti pažangias funkcijas suderinamuose žaidimuose, naudojant DirectX apverstos prezentacijos modelį",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Kintamo atnaujinimo dažnio optimizavimai",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Įjungti VRR (G-Sync/FreeSync) optimizavimus sklandesniam žaidimui suderinamuose monitoriuose. Išjungti tik jei kyla problemų su VRR ekranais",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Kintamas atnaujinimo dažnis",
+  "Setting_gaming-directx-vrr-optimizations_Description": "Įjungti VRR (G-Sync/FreeSync) optimizavimus sklandesniam žaidimui. Reikalingas su VRR suderinamas monitorius; šis nustatymas neturi jokio poveikio, jei jūsų monitorius nepalaiko VRR",
+  "Setting_gaming-directx-auto-hdr_Name": "Automatinis HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Automatiškai konvertuoti SDR turinį į HDR, kad būtų pagerintos spalvos ir ryškumas. Reikalingas HDR palaikantis ekranas su įjungtu HDR; šis nustatymas neturi jokio poveikio, jei jūsų ekranas nepalaiko HDR",
   "Setting_gaming-nvidia-sharpening_Name": "Senoji NVIDIA paryškinimo funkcija",
   "Setting_gaming-nvidia-sharpening_Description": "Įjungti senąjį NVIDIA vaizdo paryškinimo filtrą, kad būtų pagerintas vaizdo aiškumas. Veikia tik su senesnėmis NVIDIA tvarkyklėmis; naujesnės tvarkyklės turėtų naudoti NVIDIA valdymo skydelio paryškinimą",
   "Setting_gaming-fullscreen-optimizations_Name": "Pilno ekrano optimizavimai",
