--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -121,6 +121,8 @@
   "Button_Download": "Pobierz",
   "Common_On": "Włączone",
   "Common_Off": "Wyłączone",
+  "PowerStatus_PluggedIn": "Podłączony",
+  "PowerStatus_OnBattery": "Na baterii",
   "Common_Search_Placeholder": "Wpisz, aby wyszukać...",
   "Common_NoSearchResults": "Nie znaleziono ustawień odpowiadających wyszukiwaniu. Spróbuj innych słów kluczowych.",
   "Common_SelectAll": "Zaznacz wszystko",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Pozwól karcie graficznej zarządzać własną pamięcią i planowaniem w celu zmniejszenia opóźnień i poprawy wydajności",
   "Setting_gaming-directx-flip-model_Name": "Optymalizacje dla gier w oknach",
   "Setting_gaming-directx-flip-model_Description": "Zmniejsz opóźnienia i używaj zaawansowanych funkcji w kompatybilnych grach, używając modelu prezentacji DirectX flip",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Optymalizacje zmiennej częstotliwości odświeżania",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Włącz optymalizacje VRR (G-Sync/FreeSync) dla płynniejszej rozgrywki na kompatybilnych monitorach. Wyłącz tylko, jeśli występują problemy z wyświetlaczami VRR",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Zmienna częstotliwość odświeżania",
+  "Setting_gaming-directx-vrr-optimizations_Description": "Włącz optymalizacje VRR (G-Sync/FreeSync) dla płynniejszej rozgrywki. Wymaga monitora kompatybilnego z VRR; to ustawienie nie ma efektu, jeśli monitor nie obsługuje VRR",
+  "Setting_gaming-directx-auto-hdr_Name": "Auto HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Automatycznie konwertuj zawartość SDR na HDR dla lepszych kolorów i jasności. Wymaga wyświetlacza obsługującego HDR z włączonym HDR; to ustawienie nie ma efektu, jeśli wyświetlacz nie obsługuje HDR",
   "Setting_gaming-nvidia-sharpening_Name": "Starsze wyostrzanie NVIDIA",
   "Setting_gaming-nvidia-sharpening_Description": "Włącz starszy filtr wyostrzania obrazu NVIDIA dla zwiększonej klarowności wizualnej. Działa tylko na starszych sterownikach NVIDIA; nowsze sterowniki powinny używać wyostrzania z panelu sterowania NVIDIA",
   "Setting_gaming-fullscreen-optimizations_Name": "Optymalizacje pełnoekranowe",
