--- a/src/Winhance.UI/Features/Common/Localization/pt.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt.json
@@ -121,6 +121,8 @@
   "Button_Download": "Descarregar",
   "Common_On": "Ligado",
   "Common_Off": "Desligado",
+  "PowerStatus_PluggedIn": "Ligado",
+  "PowerStatus_OnBattery": "Na bateria",
   "Common_Search_Placeholder": "Escreva aqui para procurar...",
   "Common_NoSearchResults": "Nenhuma definição encontrada para a sua pesquisa. Tente palavras-chave diferentes.",
   "Common_SelectAll": "Selecionar Tudo",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Deixe o seu GPU gerir a sua própria memória e agendamento para latência reduzida e desempenho melhorado",
   "Setting_gaming-directx-flip-model_Name": "Otimizações para jogos em janela",
   "Setting_gaming-directx-flip-model_Description": "Reduzir a latência e usar funcionalidades avançadas em jogos compatíveis usando o modelo de apresentação flip do DirectX",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Otimizações de Taxa de Atualização Variável",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Ativar otimizações de VRR (G-Sync/FreeSync) para uma jogabilidade mais suave em monitores compatíveis. Desative apenas se estiver a ter problemas com ecrãs VRR",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Taxa de Atualização Variável",
+  "Setting_gaming-directx-vrr-optimizations_Description": "Ativar otimizações VRR (G-Sync/FreeSync) para uma jogabilidade mais suave. Requer um monitor compatível com VRR; esta definição não tem efeito se o seu monitor não suportar VRR",
+  "Setting_gaming-directx-auto-hdr_Name": "Auto HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Converter automaticamente conteúdo SDR para HDR para cores e luminosidade melhoradas. Requer um ecrã compatível com HDR e HDR ativado; esta definição não tem efeito se o seu ecrã não suportar HDR",
   "Setting_gaming-nvidia-sharpening_Name": "Nitidez Legada da NVIDIA",
   "Setting_gaming-nvidia-sharpening_Description": "Ativar o filtro de nitidez de imagem legado da NVIDIA para uma clareza visual melhorada. Funciona apenas em controladores NVIDIA mais antigos; controladores mais recentes devem usar a nitidez do Painel de Controlo da NVIDIA",
   "Setting_gaming-fullscreen-optimizations_Name": "Otimizações de Ecrã Inteiro",
