--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -121,6 +121,8 @@
   "Button_Download": "Завантажити",
   "Common_On": "Увімк",
   "Common_Off": "Вимк",
+  "PowerStatus_PluggedIn": "Підключено",
+  "PowerStatus_OnBattery": "Від батареї",
   "Common_Search_Placeholder": "Введіть тут для пошуку...",
   "Common_NoSearchResults": "Налаштувань, що відповідають вашому пошуку, не знайдено. Спробуйте інші ключові слова.",
   "Common_SelectAll": "Вибрати все",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Дозволити вашому ГП керувати власною пам'яттю та плануванням для зменшення затримки та покращення продуктивності",
   "Setting_gaming-directx-flip-model_Name": "Оптимізації для ігор у віконному режимі",
   "Setting_gaming-directx-flip-model_Description": "Зменшити затримку та використовувати розширені функції в сумісних іграх, використовуючи модель презентації DirectX flip",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Оптимізації змінної частоти оновлення",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Увімкнути оптимізації VRR (G-Sync/FreeSync) для більш плавного ігрового процесу на сумісних моніторах. Вимикайте лише у разі виникнення проблем з дисплеями VRR",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Змінна частота оновлення",
+  "Setting_gaming-directx-vrr-optimizations_Description": "Увімкнути оптимізації VRR (G-Sync/FreeSync) для більш плавного ігрового процесу. Потрібен монітор із підтримкою VRR; це налаштування не діє, якщо ваш монітор не підтримує VRR",
+  "Setting_gaming-directx-auto-hdr_Name": "Авто HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Автоматичне перетворення SDR-контенту в HDR для покращених кольорів та яскравості. Потрібен дисплей із підтримкою HDR та увімкненим HDR; це налаштування не діє, якщо ваш дисплей не підтримує HDR",
   "Setting_gaming-nvidia-sharpening_Name": "Застаріле підвищення різкості NVIDIA",
   "Setting_gaming-nvidia-sharpening_Description": "Увімкнути застарілий фільтр підвищення різкості зображення NVIDIA для покращеної візуальної чіткості. Працює лише на старих драйверах NVIDIA; новіші драйвери повинні використовувати підвищення різкості з Панелі керування NVIDIA",
   "Setting_gaming-fullscreen-optimizations_Name": "Оптимізації повноекранного режиму",
