--- a/src/Winhance.UI/Features/Common/Localization/vi.json
+++ b/src/Winhance.UI/Features/Common/Localization/vi.json
@@ -121,6 +121,8 @@
   "Button_Download": "Tải xuống",
   "Common_On": "Bật",
   "Common_Off": "Tắt",
+  "PowerStatus_PluggedIn": "Đang cắm sạc",
+  "PowerStatus_OnBattery": "Trên pin",
   "Common_Search_Placeholder": "Nhập vào đây để tìm kiếm...",
   "Common_NoSearchResults": "Không tìm thấy cài đặt nào phù hợp với tìm kiếm của bạn. Hãy thử các từ khóa khác.",
   "Common_SelectAll": "Chọn tất cả",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Hãy để GPU của bạn tự quản lý bộ nhớ và lịch trình của riêng mình để giảm độ trễ và cải thiện hiệu suất",
   "Setting_gaming-directx-flip-model_Name": "Tối ưu hóa cho các trò chơi có cửa sổ",
   "Setting_gaming-directx-flip-model_Description": "Giảm độ trễ và sử dụng các tính năng nâng cao trong các trò chơi tương thích bằng cách sử dụng mô hình trình bày lật DirectX",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Tối ưu hóa tốc độ làm mới thay đổi",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Bật tối ưu hóa VRR (G-Sync/FreeSync) để chơi game mượt mà hơn trên các màn hình tương thích. Chỉ tắt nếu gặp sự cố với màn hình VRR",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Tốc độ làm mới thay đổi",
+  "Setting_gaming-directx-vrr-optimizations_Description": "Bật tối ưu hóa VRR (G-Sync/FreeSync) để chơi game mượt mà hơn. Yêu cầu màn hình tương thích VRR; cài đặt này không có tác dụng nếu màn hình của bạn không hỗ trợ VRR",
+  "Setting_gaming-directx-auto-hdr_Name": "Tự động HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Tự động chuyển đổi nội dung SDR sang HDR để cải thiện màu sắc và độ sáng. Yêu cầu màn hình hỗ trợ HDR với HDR được bật; cài đặt này không có tác dụng nếu màn hình của bạn không hỗ trợ HDR",
   "Setting_gaming-nvidia-sharpening_Name": "Làm sắc nét NVIDIA cũ",
   "Setting_gaming-nvidia-sharpening_Description": "Bật bộ lọc làm sắc nét hình ảnh NVIDIA cũ để tăng cường độ rõ nét của hình ảnh. Chỉ hoạt động trên các trình điều khiển NVIDIA cũ hơn; các trình điều khiển mới hơn nên sử dụng tính năng làm sắc nét của Bảng điều khiển NVIDIA",
   "Setting_gaming-fullscreen-optimizations_Name": "Tối ưu hóa toàn màn hình",
