--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -121,6 +121,8 @@
   "Button_Download": "下载",
   "Common_On": "开",
   "Common_Off": "关",
+  "PowerStatus_PluggedIn": "接通电源",
+  "PowerStatus_OnBattery": "使用电池",
   "Common_Search_Placeholder": "在此处输入以搜索...",
   "Common_NoSearchResults": "未找到与您的搜索匹配的设置。请尝试不同的关键字。",
   "Common_SelectAll": "全选",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "让您的 GPU 管理自己的内存和调度，以减少延迟并提高性能",
   "Setting_gaming-directx-flip-model_Name": "窗口化游戏优化",
   "Setting_gaming-directx-flip-model_Description": "通过使用 DirectX 翻转演示模型，在兼容游戏中减少延迟并使用高级功能",
-  "Setting_gaming-directx-vrr-optimizations_Name": "可变刷新率优化",
-  "Setting_gaming-directx-vrr-optimizations_Description": "为兼容显示器启用 VRR (G-Sync/FreeSync) 优化，以实现更流畅的游戏体验。仅当 VRR 显示器出现问题时才禁用",
+  "Setting_gaming-directx-vrr-optimizations_Name": "可变刷新率",
+  "Setting_gaming-directx-vrr-optimizations_Description": "启用 VRR (G-Sync/FreeSync) 优化以实现更流畅的游戏体验。需要支持 VRR 的显示器；如果您的显示器不支持 VRR，此设置无效",
+  "Setting_gaming-directx-auto-hdr_Name": "自动 HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "自动将 SDR 内容转换为 HDR，以获得增强的色彩和亮度。需要支持 HDR 的显示器并启用 HDR；如果您的显示器不支持 HDR，此设置无效",
   "Setting_gaming-nvidia-sharpening_Name": "旧版 NVIDIA 锐化",
   "Setting_gaming-nvidia-sharpening_Description": "为增强视觉清晰度启用旧版 NVIDIA 图像锐化滤镜。仅适用于较旧的 NVIDIA 驱动程序；较新的驱动程序应改用 NVIDIA 控制面板锐化",
   "Setting_gaming-fullscreen-optimizations_Name": "全屏优化",
