--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -121,6 +121,8 @@
   "Button_Download": "Stáhnout",
   "Common_On": "Zapnuto",
   "Common_Off": "Vypnuto",
+  "PowerStatus_PluggedIn": "Zapojeno",
+  "PowerStatus_OnBattery": "Na baterii",
   "Common_Search_Placeholder": "Hledejte zde...",
   "Common_NoSearchResults": "Nebyla nalezena žádná nastavení odpovídající vašemu hledání. Zkuste jiná klíčová slova.",
   "Common_SelectAll": "Vybrat vše",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Nechte GPU spravovat svou vlastní paměť a plánování pro snížení latence a zlepšení výkonu",
   "Setting_gaming-directx-flip-model_Name": "Optimalizace pro hry v okně",
   "Setting_gaming-directx-flip-model_Description": "Snížit latenci a používat pokročilé funkce v kompatibilních hrách pomocí prezentačního modelu DirectX flip",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Optimalizace proměnné obnovovací frekvence",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Povolit optimalizace VRR (G-Sync/FreeSync) pro plynulejší hraní na kompatibilních monitorech. Vypněte pouze v případě problémů s displeji VRR",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Proměnná obnovovací frekvence",
+  "Setting_gaming-directx-vrr-optimizations_Description": "Povolit optimalizace VRR (G-Sync/FreeSync) pro plynulejší hraní. Vyžaduje monitor kompatibilní s VRR; toto nastavení nemá žádný účinek, pokud váš monitor nepodporuje VRR",
+  "Setting_gaming-directx-auto-hdr_Name": "Auto HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Automaticky převádět obsah SDR na HDR pro vylepšené barvy a jas. Vyžaduje displej s podporou HDR a zapnutým HDR; toto nastavení nemá žádný účinek, pokud váš displej nepodporuje HDR",
   "Setting_gaming-nvidia-sharpening_Name": "Starší doostřování NVIDIA",
   "Setting_gaming-nvidia-sharpening_Description": "Povolit starší filtr pro doostřování obrazu NVIDIA pro lepší vizuální čistotu. Funguje pouze na starších ovladačích NVIDIA; novější ovladače by měly místo toho používat doostřování v ovládacím panelu NVIDIA",
   "Setting_gaming-fullscreen-optimizations_Name": "Optimalizace pro celou obrazovku",
