--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -121,6 +121,8 @@
   "Button_Download": "Λήψη",
   "Common_On": "Ενεργό",
   "Common_Off": "Ανενεργό",
+  "PowerStatus_PluggedIn": "Συνδεδεμένο",
+  "PowerStatus_OnBattery": "Σε μπαταρία",
   "Common_Search_Placeholder": "Πληκτρολογήστε για αναζήτηση...",
   "Common_NoSearchResults": "Δεν βρέθηκαν ρυθμίσεις που να ταιριάζουν στην αναζήτησή σας. Δοκιμάστε διαφορετικές λέξεις-κλειδιά.",
   "Common_SelectAll": "Επιλογή Όλων",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Αφήστε την GPU σας να διαχειρίζεται τη δική της μνήμη και χρονοπρογραμματισμό για μειωμένη καθυστέρηση και βελτιωμένη απόδοση",
   "Setting_gaming-directx-flip-model_Name": "Βελτιστοποιήσεις για παιχνίδια σε παράθυρο",
   "Setting_gaming-directx-flip-model_Description": "Μείωση καθυστέρησης και χρήση προηγμένων δυνατοτήτων σε συμβατά παιχνίδια χρησιμοποιώντας το μοντέλο παρουσίασης DirectX flip",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Βελτιστοποιήσεις Μεταβλητού Ρυθμού Ανανέωσης",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Ενεργοποίηση βελτιστοποιήσεων VRR (G-Sync/FreeSync) για ομαλότερο παιχνίδι σε συμβατές οθόνες. Απενεργοποιήστε μόνο αν αντιμετωπίζετε προβλήματα με οθόνες VRR",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Μεταβλητός Ρυθμός Ανανέωσης",
+  "Setting_gaming-directx-vrr-optimizations_Description": "Ενεργοποίηση βελτιστοποιήσεων VRR (G-Sync/FreeSync) για ομαλότερο παιχνίδι. Απαιτεί οθόνη συμβατή με VRR· αυτή η ρύθμιση δεν έχει αποτέλεσμα εάν η οθόνη σας δεν υποστηρίζει VRR",
+  "Setting_gaming-directx-auto-hdr_Name": "Αυτόματο HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Αυτόματη μετατροπή περιεχομένου SDR σε HDR για βελτιωμένα χρώματα και φωτεινότητα. Απαιτεί οθόνη με δυνατότητα HDR και ενεργοποιημένο HDR· αυτή η ρύθμιση δεν έχει αποτέλεσμα εάν η οθόνη σας δεν υποστηρίζει HDR",
   "Setting_gaming-nvidia-sharpening_Name": "Παλαιά Όξυνση NVIDIA",
   "Setting_gaming-nvidia-sharpening_Description": "Ενεργοποίηση παλαιού φίλτρου όξυνσης εικόνας NVIDIA για βελτιωμένη οπτική καθαρότητα. Λειτουργεί μόνο σε παλαιότερα προγράμματα οδήγησης NVIDIA· τα νεότερα προγράμματα οδήγησης πρέπει να χρησιμοποιούν την όξυνση του Πίνακα Ελέγχου NVIDIA",
   "Setting_gaming-fullscreen-optimizations_Name": "Βελτιστοποιήσεις Πλήρους Οθόνης",
