--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -121,6 +121,8 @@
   "Button_Download": "Lejupielādēt",
   "Common_On": "Ieslēgts",
   "Common_Off": "Izslēgts",
+  "PowerStatus_PluggedIn": "Pieslēgts",
+  "PowerStatus_OnBattery": "Uz akumulatora",
   "Common_Search_Placeholder": "Rakstiet šeit, lai meklētu...",
   "Common_NoSearchResults": "Nav atrasti iestatījumi, kas atbilst jūsu meklēšanai. Mēģiniet citus atslēgvārdus.",
   "Common_SelectAll": "Atlasīt visu",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Ļaujiet savam GPU pārvaldīt savu atmiņu un plānošanu, lai samazinātu latentumu un uzlabotu veiktspēju",
   "Setting_gaming-directx-flip-model_Name": "Optimizācijas logu spēlēm",
   "Setting_gaming-directx-flip-model_Description": "Samaziniet latentumu un izmantojiet papildu funkcijas saderīgās spēlēs, izmantojot DirectX flip prezentācijas modeli",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Mainīga atsvaidzes intensitātes optimizācijas",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Iespējot VRR (G-Sync/FreeSync) optimizācijas vienmērīgākai spēlei saderīgos monitoros. Atspējojiet tikai tad, ja rodas problēmas ar VRR displejiem",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Mainīga atsvaidzes intensitāte",
+  "Setting_gaming-directx-vrr-optimizations_Description": "Iespējot VRR (G-Sync/FreeSync) optimizācijas vienmērīgākai spēlei. Nepieciešams ar VRR saderīgs monitors; šim iestatījumam nav ietekmes, ja jūsu monitors neatbalsta VRR",
+  "Setting_gaming-directx-auto-hdr_Name": "Automātiskais HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Automātiski pārvērst SDR saturu HDR formātā, lai uzlabotu krāsas un spilgtumu. Nepieciešams HDR saderīgs displejs ar iespējotu HDR; šim iestatījumam nav ietekmes, ja jūsu displejs neatbalsta HDR",
   "Setting_gaming-nvidia-sharpening_Name": "Mantotā NVIDIA asināšana",
   "Setting_gaming-nvidia-sharpening_Description": "Iespējot mantoto NVIDIA attēlu asināšanas filtru uzlabotai vizuālajai skaidrībai. Darbojas tikai ar vecākiem NVIDIA draiveriem; jaunākiem draiveriem jāizmanto NVIDIA vadības paneļa asināšana",
   "Setting_gaming-fullscreen-optimizations_Name": "Pilnekrāna optimizācijas",
