--- a/src/Winhance.UI/Features/Common/Localization/nl.json
+++ b/src/Winhance.UI/Features/Common/Localization/nl.json
@@ -121,6 +121,8 @@
   "Button_Download": "Downloaden",
   "Common_On": "Aan",
   "Common_Off": "Uit",
+  "PowerStatus_PluggedIn": "Aangesloten",
+  "PowerStatus_OnBattery": "Op batterij",
   "Common_Search_Placeholder": "Typ hier om te zoeken...",
   "Common_NoSearchResults": "Geen instellingen gevonden die overeenkomen met uw zoekopdracht. Probeer andere trefwoorden.",
   "Common_SelectAll": "Alles Selecteren",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Laat uw GPU zijn eigen geheugen en planning beheren voor verminderde latentie en verbeterde prestaties",
   "Setting_gaming-directx-flip-model_Name": "Optimalisaties voor games in venstermodus",
   "Setting_gaming-directx-flip-model_Description": "Verminder latentie en gebruik geavanceerde functies in compatibele games door gebruik te maken van DirectX flip-presentatiemodel",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Variabele Verversingssnelheid (VRR) Optimalisaties",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Schakel VRR (G-Sync/FreeSync) optimalisaties in voor soepelere gameplay op compatibele monitoren. Schakel alleen uit als u problemen ondervindt met VRR-schermen",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Variabele Verversingssnelheid (VRR)",
+  "Setting_gaming-directx-vrr-optimizations_Description": "VRR (G-Sync/FreeSync) optimalisaties inschakelen voor soepelere gameplay. Vereist een VRR-compatibele monitor; deze instelling heeft geen effect als uw monitor geen VRR ondersteunt",
+  "Setting_gaming-directx-auto-hdr_Name": "Auto HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "SDR-inhoud automatisch omzetten naar HDR voor verbeterde kleuren en helderheid. Vereist een HDR-compatibel scherm met HDR ingeschakeld; deze instelling heeft geen effect als uw scherm geen HDR ondersteunt",
   "Setting_gaming-nvidia-sharpening_Name": "Legacy NVIDIA Verscherping",
   "Setting_gaming-nvidia-sharpening_Description": "Schakel legacy NVIDIA beeldverscherpingsfilter in voor verbeterde visuele helderheid. Werkt alleen op oudere NVIDIA-drivers; nieuwere drivers zouden NVIDIA Control Panel verscherping moeten gebruiken",
   "Setting_gaming-fullscreen-optimizations_Name": "Volledig Scherm Optimalisaties",
