--- a/src/Winhance.UI/Features/Common/Localization/sv.json
+++ b/src/Winhance.UI/Features/Common/Localization/sv.json
@@ -121,6 +121,8 @@
   "Button_Download": "Ladda ner",
   "Common_On": "På",
   "Common_Off": "Av",
+  "PowerStatus_PluggedIn": "Inkopplad",
+  "PowerStatus_OnBattery": "På batteri",
   "Common_Search_Placeholder": "Skriv här för att söka...",
   "Common_NoSearchResults": "Inga inställningar hittades som matchar din sökning. Prova andra nyckelord.",
   "Common_SelectAll": "Välj alla",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "Låt din GPU hantera sitt eget minne och schemaläggning för minskad latens och förbättrad prestanda",
   "Setting_gaming-directx-flip-model_Name": "Optimeringar för fönsterbaserade spel",
   "Setting_gaming-directx-flip-model_Description": "Minska latensen och använd avancerade funktioner i kompatibla spel genom att använda DirectX flip-presentationsmodell",
-  "Setting_gaming-directx-vrr-optimizations_Name": "Optimeringar för variabel uppdateringsfrekvens",
-  "Setting_gaming-directx-vrr-optimizations_Description": "Aktivera VRR-optimeringar (G-Sync/FreeSync) för smidigare spelupplevelse på kompatibla skärmar. Inaktivera endast om du upplever problem med VRR-skärmar",
+  "Setting_gaming-directx-vrr-optimizations_Name": "Variabel uppdateringsfrekvens",
+  "Setting_gaming-directx-vrr-optimizations_Description": "Aktivera VRR-optimeringar (G-Sync/FreeSync) för smidigare spelupplevelse. Kräver en VRR-kompatibel skärm; denna inställning har ingen effekt om din skärm inte stöder VRR",
+  "Setting_gaming-directx-auto-hdr_Name": "Auto HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "Konvertera automatiskt SDR-innehåll till HDR för förbättrade färger och ljusstyrka. Kräver en HDR-kompatibel skärm med HDR aktiverat; denna inställning har ingen effekt om din skärm inte stöder HDR",
   "Setting_gaming-nvidia-sharpening_Name": "Äldre NVIDIA-skärpning",
   "Setting_gaming-nvidia-sharpening_Description": "Aktivera äldre NVIDIA-bildskärpningsfilter för förbättrad visuell klarhet. Fungerar endast på äldre NVIDIA-drivrutiner; nyare drivrutiner bör istället använda NVIDIA Kontrollpanelens skärpning",
   "Setting_gaming-fullscreen-optimizations_Name": "Helskärmsoptimeringar",
