--- a/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
@@ -121,6 +121,8 @@
   "Button_Download": "下載",
   "Common_On": "開啟",
   "Common_Off": "關閉",
+  "PowerStatus_PluggedIn": "接通電源",
+  "PowerStatus_OnBattery": "使用電池",
   "Common_Search_Placeholder": "在此輸入以搜尋...",
   "Common_NoSearchResults": "找不到符合您搜尋的設定。請嘗試不同的關鍵字。",
   "Common_SelectAll": "全選",
@@ -602,8 +604,10 @@
   "Setting_gaming-gpu-scheduling_Description": "讓您的 GPU 管理自己的記憶體與排程，以降低延遲並提升效能",
   "Setting_gaming-directx-flip-model_Name": "視窗化遊戲最佳化",
   "Setting_gaming-directx-flip-model_Description": "透過使用 DirectX Flip Presentation Model，減少相容遊戲的延遲並使用進階功能",
-  "Setting_gaming-directx-vrr-optimizations_Name": "可變更新率最佳化",
-  "Setting_gaming-directx-vrr-optimizations_Description": "為相容的顯示器啟用 VRR (G-Sync/FreeSync) 最佳化以獲得更流暢的遊戲體驗。僅在遇到 VRR 顯示器問題時才停用",
+  "Setting_gaming-directx-vrr-optimizations_Name": "可變更新率",
+  "Setting_gaming-directx-vrr-optimizations_Description": "啟用 VRR (G-Sync/FreeSync) 最佳化以獲得更流暢的遊戲體驗。需要支援 VRR 的顯示器；如果您的顯示器不支援 VRR，此設定無效",
+  "Setting_gaming-directx-auto-hdr_Name": "自動 HDR",
+  "Setting_gaming-directx-auto-hdr_Description": "自動將 SDR 內容轉換為 HDR，以獲得增強的色彩和亮度。需要支援 HDR 的顯示器並啟用 HDR；如果您的顯示器不支援 HDR，此設定無效",
   "Setting_gaming-nvidia-sharpening_Name": "傳統 NVIDIA 銳利化",
   "Setting_gaming-nvidia-sharpening_Description": "啟用傳統 NVIDIA 影像銳利化濾鏡以增強視覺清晰度。僅適用於舊版 NVIDIA 驅動程式；較新的驅動程式應使用 NVIDIA 控制面板的銳利化功能",
   "Setting_gaming-fullscreen-optimizations_Name": "全螢幕最佳化",
